--- a/stylesheets/scss/_index.scss
+++ b/stylesheets/scss/_index.scss
@@ -1,105 +1,22 @@
 #home_page {
-  /* Top Header */
-  .top_wrapper {
-    background: $color2;
-    padding: 0 30px;
-    text-align: center;
-  }
-  #small_desc {
-    @include background(linear-gradient(#fafafa, darken(#fafafa, 10%)));
-    @include box-shadow(rgba(#333, 0.8) 0 0 20px 2px);
-    display: inline-block;
-    padding: 16px 5%;
-    color: #323232;
-    font: 24px "Oswald", sans-serif;
-    text-shadow: #c7c7c7 0px 1px 0px;
-    vertical-align: middle;
-    small {
-      display: block;
-      font-family: "Yellowtail", serif;
-      margin-top: 20px;
-      text-align: right;
-    }
-    @media screen and (max-width: 768px) {
-      font-size: 18px;
+  @include mobile {
+    .btnbar .btn {
+      min-width: 0;
     }
   }
-  #quote {
-    text-align: center;
-    p {
-      display: inline-block;
-    }
-    q {
-      color: white;
-      font: 40px "Yellowtail", serif;
-      &:before {
-        content: "\201c";
-        margin-right: 3px;
-      }
-      &:after {
-        content: "\201d";
-        margin-left: 3px;
-      }
-    }
-    span {
-      color: $color2;
-      display: block;
-      font: 300 18px "Open Sans", sans-serif;
-      text-align: right;
-    }
-  }
-  h2 {
-    font-size: 30px;
-  }
-  #how_to_use {
-    @include border-radius(5px);
-    @include background($grad1);
-    color: #323232;
-    padding: 10px 20px;
-    margin: auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    width: 70%;
-    h4 {
-      font: italic 20px "Crete Round", serif;
-      margin-top: 10px;
-    }
-    li {
-      font-size: 18px;
-      font-style: italic;
-      margin-bottom: 10px;
-    }
-  }
-  
-  #sidenote {
-    display: block;
-    text-align: right;
-    font-size: 12px;
-  }
-  
-  .mainpage_code {
-    font-size: 12px;
-    overflow: hidden;
-  }
-  
-  
-  #threelogoholder, #twologoholder {
-    margin: 20px auto;
+  #clients {
+    margin: 0 0 $sp2;
     text-align: center;
     a {
-      margin-right: 15px;
-      &:last-child {
-        margin: 0;
-      }
+      display: inline-block;
+      margin: 0 $sp $sp2;
     }
     img {
       @include border-radius(5px);
-      max-width: 28%;
+      vertical-align: top;
+      @include mobile {
+        width: 75px;
+      }
     }
   }
-}
-
-/* Responsive*/
-@media screen and (max-width: 479px), screen and (max-height: 479px) {
-
 }
