--- a/stylesheets/scss/_header.scss
+++ b/stylesheets/scss/_header.scss
@@ -8,7 +8,7 @@
   }
 }
 #uraniumlogo {
-  background: image-url("uraniumlogo.png") no-repeat 50% 50%;
+  background: url("../images/uraniumlogo.png") no-repeat 50% 50%;
   @include background-size(100%);
   display: inline-block;
   vertical-align: middle;
