--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <p>Brought to you by &hellip;</p>
   <p>
     <a id="moovweblogo" href="http://www.moovweb.com/" target="_blank">
-      <img src="{{site.baseurl}}images/moovweblogo.png" alt="Moovweb" />
+      <img src="{{site.baseurl}}images/moovweblogo.png" alt="Moovweb">
     </a>
   </p>
   <nav>
