--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,9 @@
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 <title>{{ page.title }} | Uranium Declarative JavaScript Interaction Library</title>
-<meta name="keywords" content="Uranium {{ page.title }} page, declarative javascript interactions, declarative javascript library, declarative javascript, javascript interactions, javascript widgets, javascript library, open source, Uranium {{ page.title }}, javascript, interactions, widgets, jquery" />
-<meta name="description" content="The {{ page.title }} page for Uranium, a declarative JavaScript library that lets web page authors add convenient interactions such as carousels, togglers, tabs, and geolocation to their pages without writing a single line of JavaScript." />
-<link href="{{site.baseurl}}stylesheets/main.css" rel="stylesheet" />
+<meta name="keywords" content="Uranium {{ page.title }} page, declarative javascript interactions, declarative javascript library, declarative javascript, javascript interactions, javascript widgets, javascript library, open source, Uranium {{ page.title }}, javascript, interactions, widgets, jquery">
+<meta name="description" content="The {{ page.title }} page for Uranium, a declarative JavaScript library that lets web page authors add convenient interactions such as carousels, togglers, tabs, and geolocation to their pages without writing a single line of JavaScript.">
+<link href="{{site.baseurl}}stylesheets/main.css" rel="stylesheet">
 <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-26739163-2']);
