--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
   </p>
   <nav>
     Uranium &copy; 2013 |
-    <a href="/about.html">About</a> |
+    <a href="{{site.baseurl}}about.html">About</a> |
     <a href="https://github.com/moovweb/uranium">GitHub</a> |
     <a href="mailto:uranium@moovweb.com">Contact</a>
   </nav>
