--- a/stylesheets/scss/moovui/modules/_syntax-highlighter.scss
+++ b/stylesheets/scss/moovui/modules/_syntax-highlighter.scss
@@ -21,6 +21,7 @@
     font-size: 9px;
     font-weight: bold;
     letter-spacing: 1px;
+    line-height: 18px;
     position: absolute;
     right: 3px;
     top: 0;
