--- a/stylesheets/scss/_footer.scss
+++ b/stylesheets/scss/_footer.scss
@@ -6,3 +6,15 @@
     }
   }
 }
+
+@include mobile {
+  #footer {
+    padding: $sp2 0;
+    position: static;
+    height: auto;
+  }
+  #moovweblogo img {
+    width: 129px;
+    height: 16px;
+  }
+}
